# kt.jsonapi

./: .coveragerc  .gitignore  .readthedocs.yaml  LICENSE.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: api.rst  conf.py  error.rst  index.rst  interfaces.rst  introduction.rst  link.rst  relation.rst  requirements.txt
src/kt/jsonapi/: api.py  error.py  interfaces.py  link.py  relation.py  serializers.py
tests/: objects.py  test_context.py  test_error.py  test_impl_details.py  test_overrides.py  test_relation.py  test_responses.py  test_serializers.py  utils.py
