
[metadata]
name = kt.jsonapi
version = 1.4.0
license_files = LICENSE.txt
author = Fred Drake
author_email = fred.drake@keepertech.com
url = https://kt-git.keepertech.com/DevTools/kt.jsonapi
description = JSON:API support library.
classifiers =
    Framework :: Flask
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
namespace_packages = kt
packages = kt.jsonapi
package_dir =
    = src
install_requires =
    Flask
    zope.component
    zope.interface
    zope.schema
