
[metadata]
name = kt.jsonapi
version = 1.6.0
license_files = LICENSE.rst
author = Fred Drake
author_email = fred@fdrake.net
url = https://github.com/keepertech/kt.jsonapi
description = JSON:API support library.
classifiers =
    Framework :: Flask
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
namespace_packages = kt
packages = kt.jsonapi
package_dir =
    = src
install_requires =
    Flask
    werkzeug
    zope.component
    zope.interface
    zope.schema
